@startuml
package ui {
    package subject {
        package user {
            class SubjectListController <<view controller>>
            class SubjectViewController <<view controller>>
        }

        package admin {
            class SubjectFormController <<view controller>>
        }

    }
}

package services {
    package subjects {
        interface SubjectService
        class SubjectServiceImpl

        package repository {
            interface SubjectRepository
            class SubjectSpecifications {
                + {static} containsWordsInNameOrDescription(search querry): Specification<Subject>
            }
        }

        SubjectService <|.. SubjectServiceImpl
        SubjectServiceImpl *--> SubjectRepository
        SubjectServiceImpl --> SubjectSpecifications: create specification
    }
    package subjectResource {
        interface SubjectResourceService
        class SubjectResourceServiceImpl

        package repository {
            interface SubjectResourceRepository
        }
        SubjectResourceService <|.. SubjectResourceServiceImpl
        SubjectResourceServiceImpl *--> SubjectResourceRepository
    }

    package storage {
        interface StorageService {
            + uploadFile(filePath: String, inputStream: InputStream, size: long, contentType: String): String
            + downloadFile(filePath: String): InputStream
            + deleteFile(filePath: String)
            + fileExists(filePath: String): boolean
        }

        class LocalStorageService {
            + uploadFile(filePath: String, inputStream: InputStream, size: long, contentType: String): String
            + downloadFile(filePath: String): InputStream
            + deleteFile(filePath: String)
            + fileExists(filePath: String): boolean
        }
        StorageService <|.. LocalStorageService
    }
}

SubjectListController *--> SubjectService
SubjectViewController *--> SubjectService
SubjectViewController *--> SubjectResourceService
SubjectFormController *--> SubjectService
@enduml